--- a/public/stylesheets/profile.css
+++ b/public/stylesheets/profile.css
@@ -278,6 +278,7 @@ nav .right {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  cursor: pointer;
 }
 
 .card h2 {
