--- a/views/other_profile.ejs
+++ b/views/other_profile.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile</title>
-   <link rel="icon" type="image/x-icon" href="/media/europa-icon.png">
+    <link rel="icon" type="image/x-icon" href="/media/europa-icon.png">
     <link rel="stylesheet" href="/stylesheets/other_profile.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,7 +16,7 @@
 
 <body>
 
-     <div class="hacks"></div>
+    <div class="hacks"></div>
 
 
     <nav>
@@ -27,8 +27,12 @@
         </div>
         <div class="right">
             <a href="/newpost" id="create-post">NEW POST</a>
-             <a href="/newpost" id="create-post-icon"><svg xmlns="http://www.w3.org/2000/svg" height="30px" viewBox="0 -960 960 960" width="30px" fill="#42242a"><path d="M440-280h80v-160h160v-80H520v-160h-80v160H280v80h160v160Zm40 200q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Zm0-320Z"/></svg></a>
-   
+            <a href="/newpost" id="create-post-icon"><svg xmlns="http://www.w3.org/2000/svg" height="30px"
+                    viewBox="0 -960 960 960" width="30px" fill="#42242a">
+                    <path
+                        d="M440-280h80v-160h160v-80H520v-160h-80v160H280v80h160v160Zm40 200q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Zm0-320Z" />
+                </svg></a>
+
             <a id="profile-icon" href="/myprofile">
                 <img src="<%= user.icon %>" alt="">
             </a>
@@ -85,7 +89,7 @@
                 <% } %>
                     <div class="posts">
 
-                         <% function timeAgo(date) { const seconds=Math.floor((Date.now() - new Date(date)) / 1000);
+                        <% function timeAgo(date) { const seconds=Math.floor((Date.now() - new Date(date)) / 1000);
                             const units=[ { label: 'year' , seconds: 365 * 24 * 60 * 60 }, { label: 'month' , seconds:
                             30 * 24 * 60 * 60 }, { label: 'day' , seconds: 24 * 60 * 60 }, { label: 'hour' , seconds: 60
                             * 60 }, { label: 'minute' , seconds: 60 }, { label: 'second' , seconds: 1 } ]; for (const
@@ -98,50 +102,54 @@
                             } %>
 
 
-                        <% userposts.forEach(function(post) { %>
+                            <% userposts.forEach(function(post) { %>
 
-                            <div class="card" style="background-color: <%= post.cardColor %>;">
-                                <div class="person-details">
-                                    <div class="person-icon">
-                                        <img src="<%=otheruser.icon%>" alt="person" />
+                                <div class="card" style="background-color: <%= post.cardColor %>;"
+                                    onclick="handleCardClick(event, '<%= post._id %>')">
+                                    <div class="person-details">
+                                        <div class="person-icon">
+                                            <img src="<%=otheruser.icon%>" alt="person" />
+                                        </div>
+                                        <div class="person-name">
+                                            @<%=otheruser.username%>
+                                        </div>
                                     </div>
-                                    <div class="person-name">
-                                        @<%=otheruser.username%>
+                                    <!-- <h2>Post Title</h2> -->
+                                    <p>
+                                    <p>
+                                        <%- post.content.replace(/\n/g, '<br>' ) %>
+                                    </p>
+                                    </p>
+                                    <div class="card-footer">
+                                        <div class="datecontainer">
+                                            <%=timeAgo(post.date)%>
+                                        </div>
+                                        <div class="like-container">
+                                            <button
+                                                class="like-button <%= post.likes.includes(user._id) ? 'liked' : '' %>"
+                                                onclick="toggleLike(this, '<%= post._id %>')">
+                                                <!-- Unliked (outlined heart) -->
+                                                <svg class="heart-outline" xmlns="http://www.w3.org/2000/svg"
+                                                    height="30px" viewBox="0 -960 960 960" width="30px" fill="#42242a">
+                                                    <path
+                                                        d="m480-120-58-52q-101-91-167-157T150-447.5Q111-500 95.5-544T80-634q0-94 63-157t157-63q52 0 99 22t81 62q34-40 81-62t99-22q94 0 157 63t63 157q0 46-15.5 90T810-447.5Q771-395 705-329T538-172l-58 52Zm0-108q96-86 158-147.5t98-107q36-45.5 50-81t14-70.5q0-60-40-100t-100-40q-47 0-87 26.5T518-680h-76q-15-41-55-67.5T300-774q-60 0-100 40t-40 100q0 35 14 70.5t50 81q36 45.5 98 107T480-228Zm0-273Z" />
+                                                </svg>
+
+                                                <!-- Liked (filled heart) -->
+                                                <svg class="heart-filled" xmlns="http://www.w3.org/2000/svg"
+                                                    height="30px" viewBox="0 -960 960 960" width="30px" fill="#42242a">
+                                                    <path
+                                                        d="m480-120-58-52q-101-91-167-157T150-447.5Q111-500 95.5-544T80-634q0-94 63-157t157-63q52 0 99 22t81 62q34-40 81-62t99-22q94 0 157 63t63 157q0 46-15.5 90T810-447.5Q771-395 705-329T538-172l-58 52Z" />
+                                                </svg>
+                                            </button>
+                                            <span class="like-count">
+                                                <%=post.likesCount%>
+                                            </span>
+                                        </div>
                                     </div>
                                 </div>
-                                <!-- <h2>Post Title</h2> -->
-                                <p>
-                                <p>
-                                   <%- post.content.replace(/\n/g, '<br>') %>
-                                </p>
-                                </p>
-                                <div class="card-footer">
-                                    <div class="datecontainer"><%=timeAgo(post.date)%></div>
-                                    <div class="like-container">
-                                        <button class="like-button <%= post.likes.includes(user._id) ? 'liked' : '' %>"
-                                            onclick="toggleLike(this, '<%= post._id %>')">
-                                            <!-- Unliked (outlined heart) -->
-                                            <svg class="heart-outline" xmlns="http://www.w3.org/2000/svg" height="30px"
-                                                viewBox="0 -960 960 960" width="30px" fill="#42242a">
-                                                <path
-                                                    d="m480-120-58-52q-101-91-167-157T150-447.5Q111-500 95.5-544T80-634q0-94 63-157t157-63q52 0 99 22t81 62q34-40 81-62t99-22q94 0 157 63t63 157q0 46-15.5 90T810-447.5Q771-395 705-329T538-172l-58 52Zm0-108q96-86 158-147.5t98-107q36-45.5 50-81t14-70.5q0-60-40-100t-100-40q-47 0-87 26.5T518-680h-76q-15-41-55-67.5T300-774q-60 0-100 40t-40 100q0 35 14 70.5t50 81q36 45.5 98 107T480-228Zm0-273Z" />
-                                            </svg>
 
-                                            <!-- Liked (filled heart) -->
-                                            <svg class="heart-filled" xmlns="http://www.w3.org/2000/svg" height="30px"
-                                                viewBox="0 -960 960 960" width="30px" fill="#42242a">
-                                                <path
-                                                    d="m480-120-58-52q-101-91-167-157T150-447.5Q111-500 95.5-544T80-634q0-94 63-157t157-63q52 0 99 22t81 62q34-40 81-62t99-22q94 0 157 63t63 157q0 46-15.5 90T810-447.5Q771-395 705-329T538-172l-58 52Z" />
-                                            </svg>
-                                        </button>
-                                        <span class="like-count">
-                                            <%=post.likesCount%>
-                                        </span>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <% }); %>
+                                <% }); %>
 
                     </div>
         </div>
@@ -203,6 +211,19 @@
             } catch (err) {
                 console.error("Follow toggle failed:", err);
             }
+        }
+    </script>
+
+    <script>
+        function handleCardClick(event, postId) {
+            // Prevent navigation if clicking on the profile link or like button
+            if (
+                event.target.closest('.person-details') ||
+                event.target.closest('.like-button')
+            ) {
+                return;
+            }
+            window.location.href = '/post/' + postId;
         }
     </script>
 
